--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "bootstrap": "^5.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "i18next": "^23.2.2",
     "next": "13.4.5",
+    "next-i18next": "^14.0.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.0",
     "swiper": "^9.4.0"
   }
 }
