slug page changes

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-loading-skeleton": "^3.3.1",
     "swiper": "^9.4.0"
   }
 }
