--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-loader-spinner": "^5.4.5",
     "react-loading-skeleton": "^3.3.1",
     "swiper": "^9.4.0"
+  },
+  "devDependencies": {
+    "sass": "^1.69.4"
   }
 }
