--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^13.0.0",
     "react-loader-spinner": "^5.4.5",
     "react-loading-skeleton": "^3.3.1",
+    "react-select": "^5.8.0",
     "swiper": "^9.4.0",
     "uuid": "^9.0.1"
   },
