--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "d3": "^7.8.5",
@@ -25,6 +26,7 @@
     "react-i18next": "^13.0.0",
     "react-loader-spinner": "^5.4.5",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.0.4",
     "react-select": "^5.8.0",
     "swiper": "^9.4.0",
     "uuid": "^9.0.1"
